# MusicORG

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  RELEASE_NOTES_v0.6.0.md  golden-snuggling-hartmanis.md  pyproject.toml  requirements.txt
.github/: release.yml
.github/workflows/: release-automation.yml  windows-exe-release.yml
docs/: theme-plugin-framework-plan.md
docs/themes/: overrides.md  overview.md  quickstart.md  reference-tokens.md  sharing.md  spec-v1.md  template-files.md  troubleshooting.md
docs/themes/examples/: README.md
musicorg/: __init__.py  __main__.py  app.py  errors.py  runtime_paths.py
musicorg/config/: settings.py
musicorg/core/: autotagger.py  beets_config.py  duplicate_finder.py  library.py  scanner.py  syncer.py  tag_cache.py  tagger.py
musicorg/ui/: artwork_downloader_panel.py  autotag_panel.py  duplicates_panel.py  keybindings.py  main_window.py  raw_files_panel.py  settings_dialog.py  shortcuts_dialog.py  source_panel.py  sync_panel.py  tag_editor_panel.py  theme.py  theme_dialog.py  utils.py
musicorg/ui/models/: file_table_model.py  (+1 more)
musicorg/workers/: artwork_worker.py  autotag_worker.py  base_worker.py  duplicate_worker.py  scan_worker.py  sync_worker.py  tag_read_worker.py  tag_write_worker.py
tests/: test_autotagger.py  test_beets_config.py  test_duplicate_finder.py  test_keybindings.py  test_runtime_paths.py  test_scanner.py  test_selection_manager.py  test_sync_duplicate_workers.py  test_syncer.py  test_tag_cache.py  test_tagger.py  test_theme_framework.py  test_ui_widgets.py  test_workers.py
(+38 files in other folders)
