[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "musicorg"
version = "0.6.0"
description = "PySide6 desktop UI for music library management"
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.6.0",
    "musicbrainzngs>=0.7.1",
    "python3-discogs-client>=2.3.15",
    "mutagen>=1.47.0",
]

[project.scripts]
musicorg = "musicorg.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-qt>=4.4",
]
extras = [
    "send2trash>=1.8.0",
]

[tool.pytest.ini_options]
addopts = "-v --tb=short"
testpaths = ["tests"]
